# black-scholes-transpiled-rs

./: .gitignore  Cargo.toml  PROCEEDINGS.md  bench_ffi.py
benches/: black_scholes.rs
ffi/src/: lib.rs
src/: black_scholes_dp.rs  black_scholes_ndp.rs  lib.rs  main.rs  test_regression.rs
