[package]
name = "black_scholes"
version = "0.1.0"
authors = ["Henri Lunnikivi <henri.lunnikivi@gmail.com>"]
edition = "2018"

[lib]
name = "black_scholes"

[dependencies]
ndarray = "0.13.0"
statrs = "0.12.0"

[dev-dependencies]
approx = "0.3.2"
criterion = "^0.3"

[[bench]]
name = "black_scholes"
harness = false