[package]
name = "black_scholes"
version = "0.1.0"
authors = ["Henri Lunnikivi <henri.lunnikivi@gmail.com>"]
edition = "2018"

[lib]
name = "black_scholes"

[[bin]]
name = "black_scholes"

[dependencies]
statrs = "0.12.0"
itertools = "0.9.0"
rand = "0.7.3"
savefile = "0.6.1"

[dev-dependencies]
approx = "0.3.2"
criterion = "^0.3"
itertools = "0.9.0"

[[bench]]
name = "black_scholes"
harness = false

[workspace]
members = [
    "ffi",
]
